[tool.poetry]
name = "home-split"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"
sqlmodel = "^0.0.6"
alembic = "^1.8.0"
aiomysql = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
